--- a/index.html
+++ b/index.html
@@ -4,35 +4,15 @@
 	<title></title>
 </head>
 <body>
+	<section>
+		<div id="caja"></div>
+		<form action="post">
+			<input type="text" name="mensaje" id="mensaje">
+			<button>Enviar</button>
+		</form>
+	</section>
+	<script src="jquery-3.3.1.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyD0IoYI_jy2ug7gWujawwKGQ6XORiQc-L8",
-    authDomain: "chat-c300b.firebaseapp.com",
-    databaseURL: "https://chat-c300b.firebaseio.com",
-    projectId: "chat-c300b",
-    storageBucket: "",
-    messagingSenderId: "487354274980"
-  };
-  firebase.initializeApp(config);
-
-  const database = firebase.database();
-
-  const mensajes = database.ref('mensajes');
-
-  mensajes.push(
-  {
-  	 mensaje: "Hola mundo cruel",
-  	 privado: true,
-  	 leido: false
-  }, function(error){
-  	if(error) {
-  		console.log(error);
-  	}else{
-  		console.log('mensaje enviado');
-  	}
-  });
-</script>
+	<script src="main.js"></script>
 </body>
 </html>
